# paper-differ

./: .gitignore  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: check.yml
paper-differ/: __main__.py  util.py
