[tool.poetry]
name = "paper-differ"
version = "0.1.0"
description = "Paper commit differ"
authors = ["xyzeva <xyzeva@riseup.net>"]
readme = "README.md"
packages = [{ include = "paper-differ" }]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
